<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="No_cities">No cities</string>
    <string name="about_clock">About Clock</string>
    <string name="action_bar_save">Save</string>
    <string name="add">Add</string>
    <string name="add_alarm">Add alarm</string>
    <string name="add_city">Add city</string>
    <string name="add_from_phone_tts">Add from phone</string>
    <string name="add_from_tablet_tts">Add from tablet</string>
    <string name="add_voice">Add voice</string>
    <string name="alarm">Alarm</string>
    <string name="alarm_alert_date_format">EEE, d MMM</string>
    <string name="alarm_alert_date_format_for_tts">EEEE, d MMMM</string>
    <string name="alarm_alert_dismiss_swipe_comment">Swipe to dismiss alarm.</string>
    <string name="alarm_alert_instruction_comment">Drag circle to dismiss</string>
    <string name="alarm_bixby">Bixby briefing</string>
    <string name="alarm_bixby_alarm">Bixby alarm</string>
    <string name="alarm_bixby_celeb_description">You can download more celebrity alarms from the Galaxy Store.</string>
    <string name="alarm_bixby_description">Read out the current time, weather forecast, and news over music as the alarm rings.</string>
    <string name="alarm_bixby_description_chn">Have Bixby read aloud the current time, weather, or other information when your alarm rings. This function needs to use a network connection.</string>
    <string name="alarm_bixby_description_kor">Wake up to Bixby or your favorite celebrity. You\'ll be informed about the current time, weather, and news when the alarm rings.</string>
    <string name="alarm_bixby_description_not_include_news">Read out the current time and weather forecast over music as the alarm rings.</string>
    <string name="alarm_bixby_voice">Bixby voice</string>
    <string name="alarm_cancel_workingday">Alarm repeat canceled for all workdays. Alarm will sound on selected days only.</string>
    <string name="alarm_celeb_voice">Celebrity voice</string>
    <string name="alarm_celeb_voice_description">Wake up to the sound of your favorite voice along with music.</string>
    <string name="alarm_celeb_voice_selected_voice">Selected voice</string>
    <string name="alarm_celeb_voice_sub_text">Bixby wakes you up with celebrity voice.</string>
    <string name="alarm_celebrity_alarm">Celebrity alarm</string>
    <string name="alarm_date">Date</string>
    <string name="alarm_date_unable_to_set_today">Can\'t set alarms for times in the past. Alarm set for tomorrow.</string>
    <string name="alarm_exclude_substitute">Exclude substitute holidays</string>
    <string name="alarm_exist_same">Alarm already set for %s.</string>
    <string name="alarm_exist_update">Alarm already set for %s. Existing alarm updated.</string>
    <string name="alarm_holiday">Disable during public holidays</string>
    <string name="alarm_holiday_description">Disable alarms temporarily when they are set to be repeated during public holidays.</string>
    <string name="alarm_include_substitute">Include substitute holidays</string>
    <string name="alarm_item_double_tab_go_to_edit_for_tts">Double tap to edit.</string>
    <string name="alarm_main_alert_alarm_now_ringing">Alarm ringing</string>
    <string name="alarm_main_alert_alarm_will_sound">Alarm will go off soon</string>
    <string name="alarm_main_alert_all_off">All alarms are off</string>
    <string name="alarm_main_alert_hours_minutes">Alarm in %1$d hours %2$d minutes</string>
    <string name="alarm_main_alert_in_hours_one_min_plurals">Alarm in %d hours 1 minute</string>
    <string name="alarm_main_alert_in_one_hour_one_min_plurals">Alarm in 1 hour 1 minute</string>
    <string name="alarm_main_alert_not_ringing_on_holidays_kor">No alarms will ring during holidays</string>
    <string name="alarm_main_alert_not_ringing_on_public_holidays_jp">No alarms will ring during public holidays</string>
    <string name="alarm_main_alert_one_hour_minutes">Alarm in 1 hour %d minutes</string>
    <string name="alarm_main_alert_ringing_only_workdays_chn">Alarms will only ring on workdays</string>
    <string name="alarm_main_alert_snoozed_alarm">Alarm snoozed</string>
    <string name="alarm_max_item">Can\'t add more than %d alarms.</string>
    <string name="alarm_mute">Mute</string>
    <string name="alarm_no_alarm">No alarms</string>
    <string name="alarm_notification_during_emergency_call_back_mode">%s alarm will sound after Emergency callback mode is turned off.</string>
    <string name="alarm_notification_snoozed">Alarm will sound at %s</string>
    <string name="alarm_notification_snoozed_title">%s snoozed</string>
    <string name="alarm_notification_upcoming">Upcoming alarm</string>
    <string name="alarm_notify_snooze_text">Alarm set for %1$s. Select to cancel</string>
    <string name="alarm_off">Off</string>
    <string name="alarm_off_description">Alarm off</string>
    <string name="alarm_on">On</string>
    <string name="alarm_on_description">Alarm on</string>
    <string name="alarm_option_expired">%s (expired)</string>
    <string name="alarm_option_expires">%1$s (expires %2$s)</string>
    <string name="alarm_set_date">Set date</string>
    <string name="alarm_set_over_24h">Alarm set for %1$s on %2$s.</string>
    <string name="alarm_set_over_24h_exist">Alarm already set for %1$s on %2$s.</string>
    <string name="alarm_snooze_10min">10 minutes</string>
    <string name="alarm_snooze_15min">15 minutes</string>
    <string name="alarm_snooze_30min">30 minutes</string>
    <string name="alarm_snooze_3times">3 times</string>
    <string name="alarm_snooze_5min">5 minutes</string>
    <string name="alarm_snooze_5times">5 times</string>
    <string name="alarm_snooze_duration">Interval</string>
    <string name="alarm_snooze_infinity">Continuously</string>
    <string name="alarm_snooze_repeat">Repeat</string>
    <string name="alarm_sound">Alarm sound</string>
    <string name="alarm_sound_mode_jpn">Vibrate for alarms and timers</string>
    <string name="alarm_sound_mode_sub_title_jpn">Always vibrate for alarms and timers if the Sound mode is set to either Mute or Vibrate.</string>
    <string name="alarm_tone_set_silent">Can\'t change volume. Alarm sound is off.</string>
    <string name="alarm_tts">Read time aloud</string>
    <string name="alarm_tts_current_time">It\'s %1$d:%2$02d</string>
    <string name="alarm_tts_current_time_am">It\'s %1$d:%2$02d AM</string>
    <string name="alarm_tts_current_time_pm">It\'s %1$d:%2$02d PM</string>
    <string name="alarm_tts_dialog">The time can\'t be read aloud in your system language. You can have the time read aloud in %s or select another language in Settings.</string>
    <string name="alarm_tts_dialog_title">Read time aloud in %s?</string>
    <string name="alarm_tts_sub">Time is read aloud when the alarm rings.</string>
    <string name="alarm_turn_off">Turn off</string>
    <string name="alarm_turn_on">Turn on</string>
    <string name="alarm_update_calendar_go_setting">Tap SETTINGS to go to Calendar settings and update the holiday calendar.</string>
    <string name="alarm_update_calendar_popup_message">To repeat alarms on workdays, the Chinese holiday calendar needs to be updated. If you don\'t update it, the alarms may not operate properly.</string>
    <string name="alarm_update_calendar_popup_title">Update Chinese holiday calendar</string>
    <string name="alarm_upsm_guide_message">To repeat alarms on workdays in Maximum power saving mode, you need to add the Calendar app to the Home screen.</string>
    <string name="alarm_upsm_guide_title">Add Calendar</string>
    <string name="alarm_use_tts">Use %s</string>
    <string name="alarm_volume">Alarm volume</string>
    <string name="alarm_workdays">Workdays</string>
    <string name="alarmname">Alarm name</string>
    <string name="alarmrepeat">Alarm repeat</string>
    <string name="alarmrepeatday0">Every Sunday</string>
    <string name="alarmrepeatday1">Every Monday</string>
    <string name="alarmrepeatday2">Every Tuesday</string>
    <string name="alarmrepeatday3">Every Wednesday</string>
    <string name="alarmrepeatday4">Every Thursday</string>
    <string name="alarmrepeatday5">Every Friday</string>
    <string name="alarmrepeatday6">Every Saturday</string>
    <string name="alarmvibration">Vibration</string>
    <string name="alarmworkdays">Repeat on workdays (not holidays)</string>
    <string name="all">All</string>
    <string name="allow">Allow</string>
    <string name="allow_to_use_network">%s needs to use network connections to work normally. Allow?</string>
    <string name="analog_clock">Analog clock</string>
    <string name="app_info">App info</string>
    <string name="app_name">Clock</string>
    <string name="auto_recommendation_help">Play selected highlights of the track.</string>
    <string name="bixby">Bixby</string>
    <string name="button">Button</string>
    <string name="can_not_turn_on_celeb_voice">Download celebrity voices?</string>
    <string name="can_not_turn_on_celeb_voice_description">Turning off Bixby Voice turns on Celebrity voice.\n\nYou\'ll need at least 1 voice before you can turn on Celebrity voice. Go to Celebrity voice, download a voice, then try again.</string>
    <string name="cancel">Cancel</string>
    <string name="cant_check_for_updates_phone">Can\'t check for updates. Your phone\'s network connection isn\'t stable.</string>
    <string name="cant_check_for_updates_tablet">Can\'t check for updates. Your tablet\'s network connection isn\'t stable.</string>
    <string name="cant_open_maximum_power_saving">Can\'t open %s while Maximum power saving mode is on.</string>
    <string name="change_alarm">Change alarm</string>
    <string name="delete">Delete</string>
    <string name="menu_customization_service">Customization Service</string>
    <string name="menu_pre_alarm_power_on">Pre-alarm power on</string>
    <string name="powered_by">powered by</string>
    <string name="reset_full">Reset</string>
    <string name="resume">Resume</string>
    <string name="ringtone">Ringtone</string>
    <string name="selected_ringtone">Selected ringtone</string>
    <string name="setting">Settings</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="stopwatch_lap">Lap</string>
    <string name="stopwatch_no_lap_list">No laps completed</string>
    <string name="timer_hr">Hours</string>
    <string name="timer_min">Minutes</string>
    <string name="timer_sec">Seconds</string>
    <string name="worldclock">World clock</string>
    <string name="sesl_appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
</resources>