<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <item android:id="@+id/menu_alarm_delete" android:visible="false" android:title="@string/delete" android:showAsAction="never"/>
    <item android:id="@+id/menu_alarm_prepower_onoff" android:visible="false" android:title="@string/menu_pre_alarm_power_on" android:showAsAction="never"/>
    <item android:id="@+id/menu_alarm_customization_service_onoff" android:visible="false" android:title="@string/menu_customization_service" android:showAsAction="never"/>
    <item android:icon="@drawable/tw_fab_add_mtrl" android:id="@+id/menu_alarm_add" android:title="@string/add_alarm" android:showAsAction="always"/>
    <item android:id="@+id/menu_alarm_setting" android:visible="false" android:title="@string/setting" android:showAsAction="never"/>
</menu>
