<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/timer_title_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/Direction_LTR">
    <TextView android:id="@+id/timer_hour_text" android:text="@string/timer_hr" style="@style/TimerTitleViewStyle"/>
    <TextView android:id="@+id/timer_min_text" android:text="@string/timer_min" android:layout_toEndOf="@+id/timer_hour_text" style="@style/TimerTitleViewStyle"/>
    <TextView android:id="@+id/timer_sec_text" android:text="@string/timer_sec" android:layout_toEndOf="@+id/timer_min_text" style="@style/TimerTitleViewStyle"/>
</RelativeLayout>
