<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar android:id="@+id/toolbar" android:layout_width="match_parent" android:layout_height="?attr/actionBarSize" app:title="@string/app_name" app:popupTheme="@style/ClockThemeAppCompat" style="@style/ClockCollapsingToolbarLayoutStyle"/>
    <RelativeLayout android:id="@+id/stopwatch_button" android:layout_width="match_parent" android:layout_height="@dimen/stopwatch_button_layout_height" android:layout_marginTop="@dimen/stopwatch_button_margin_top" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <android.support.v7.widget.AppCompatButton android:textColor="@color/stopwatch_timer_button_start_textcolor" android:id="@+id/stopwatch_startButton" android:background="@drawable/timer_start_btn" android:visibility="visible" android:text="@string/start" android:layout_centerHorizontal="true" app:backgroundTint="@color/stopwatch_timer_button_start_background_color" style="@style/StopwatchButtonStyle"/>
        <android.support.v7.widget.AppCompatButton android:textColor="@color/stopwatch_button_stop_textcolor" android:id="@+id/stopwatch_stopButton" android:background="@drawable/timer_start_btn" android:visibility="gone" android:text="@string/stop" android:layout_alignParentStart="true" app:backgroundTint="@color/stopwatch_button_stop_background_color" style="@style/StopwatchButtonStyle"/>
        <android.support.v7.widget.AppCompatButton android:textColor="@color/stopwatch_button_lap_textcolor" android:id="@+id/stopwatch_lapButton" android:background="@drawable/stopwatch_lap_btn" android:visibility="gone" android:text="@string/stopwatch_lap" android:layout_alignParentEnd="true" app:backgroundTint="@color/stopwatch_button_lap_background_color" style="@style/StopwatchButtonStyle"/>
        <android.support.v7.widget.AppCompatButton android:textColor="@color/stopwatch_button_resume_textcolor" android:id="@+id/stopwatch_resumeButton" android:background="@drawable/timer_start_btn" android:visibility="gone" android:text="@string/resume" android:layout_alignParentStart="true" app:backgroundTint="@color/stopwatch_button_resume_background_color" style="@style/StopwatchButtonStyle"/>
        <android.support.v7.widget.AppCompatButton android:textColor="@color/stopwatch_button_reset_textcolor" android:id="@+id/stopwatch_resetButton" android:background="@drawable/timer_start_btn" android:visibility="gone" android:text="@string/reset_full" android:contentDescription="@string/reset_full" android:layout_alignParentEnd="true" app:backgroundTint="@color/stopwatch_button_reset_background_color" style="@style/StopwatchButtonStyle"/>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/stopwatch_main_layout" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_above="@+id/stopwatch_button" android:layout_below="@+id/toolbar">
        <RelativeLayout android:gravity="center" android:id="@+id/stopwatch_timeview_layout" android:focusable="true" android:layout_width="match_parent" android:layout_height="@dimen/stopwatch_common_timeview_layout_expand_height">
            <com.sec.android.app.clockpackage.stopwatch.view.StopwatchTimeView android:id="@+id/stopwatch_timeview" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true"/>
            <com.sec.android.app.clockpackage.stopwatch.view.StopwatchLapTimeView android:gravity="center" android:id="@+id/stopwatch_laptime_layout" android:focusable="false" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/stopwatch_laptime_margin_top" android:layout_below="@+id/stopwatch_timeview" android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <RelativeLayout android:id="@+id/list_stub_layout" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/stopwatch_timeview_layout" android:layout_centerHorizontal="true">
            <ViewStub android:id="@+id/list_stub" android:layout="@layout/stopwatch_list_layout" android:inflatedId="@+id/content_import" android:layout_width="match_parent" android:layout_height="match_parent"/>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/stopwatch_no_list_items_text_layout" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginEnd="@dimen/stopwatch_landscape_listview_margin" android:layout_toEndOf="@+id/stopwatch_button">
        <TextView android:textSize="@dimen/stopwatch_no_list_items_text_size" android:textColor="@color/stopwatch_no_list_items_text_color" android:gravity="center" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/stopwatch_no_lap_list" android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <ImageView android:id="@+id/stopwatch_divider" android:background="@color/stopwatch_divider_color" android:visibility="gone" android:layout_width="@dimen/stopwatch_divider_width" android:layout_height="match_parent" android:layout_below="@+id/toolbar" android:layout_centerVertical="true" android:layout_toEndOf="@+id/stopwatch_button" android:layout_marginVertical="@dimen/stopwatch_divider_vertical_margin"/>
</RelativeLayout>
