<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="horizontal" android:id="@+id/alarm_tone_box" android:baselineAligned="false" android:onClick="optionClicked" android:paddingVertical="0dp" style="@style/ListViewStyle">
        <LinearLayout android:orientation="vertical" android:id="@+id/alarm_tone_layout" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:paddingVertical="@dimen/alarm_winset_listview_padding_top_bottom">
            <TextView android:id="@+id/alarm_tone_subject" android:text="@string/selected_ringtone" style="@style/TextStyle_1"/>
            <RelativeLayout android:id="@+id/alarm_tone_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="@dimen/alarm_detail_item_textview_margin_start" android:layout_marginEnd="@dimen/alarm_detail_item_switch_margin_start">
                <TextView android:textColor="@color/alarm_detail_sub_text_color" android:id="@+id/alarm_mute" android:visibility="gone" android:text="@string/alarm_mute" android:layout_marginStart="0dp" android:layout_marginEnd="0dp" style="@style/TextStyle_2"/>
                <TextView android:textColor="@color/alarm_detail_sub_text_color" android:id="@+id/alarm_tone" android:layout_marginStart="0dp" android:layout_marginEnd="0dp" style="@style/TextStyle_2"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
    <View android:id="@+id/divider_alarm_tone" style="@style/ListViewLineSeperator"/>
    <LinearLayout android:orientation="horizontal" android:id="@+id/alarm_tts_box" android:soundEffectsEnabled="false" android:onClick="optionClicked" android:paddingVertical="0dp" style="@style/ListViewStyle">
        <LinearLayout android:orientation="vertical" android:id="@+id/alarm_tts_layout" android:duplicateParentState="true" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:paddingVertical="@dimen/alarm_winset_listview_padding_top_bottom">
            <TextView android:id="@+id/alarm_tts_subject" android:text="@string/alarm_tts" style="@style/TextStyle_1"/>
            <TextView android:textColor="?android:attr/textColorSecondary" android:id="@+id/alarm_tts_value" android:text="@string/alarm_tts_sub" android:maxLines="3" android:layout_marginEnd="@dimen/alarm_detail_item_switch_margin_start" style="@style/TextStyle_2"/>
        </LinearLayout>
        <Switch android:gravity="center_vertical" android:id="@+id/alarm_tts_switch" android:focusable="false" android:clickable="true" android:layout_width="wrap_content" android:layout_height="match_parent" android:checked="false" android:contentDescription="@string/alarm_tts" android:paddingStart="0dp" android:paddingEnd="@dimen/alarm_detail_item_textview_margin_end"/>
    </LinearLayout>
</LinearLayout>
